--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,17 @@ body {
 }
 .main-nav {
   display: flex;
-  height: 80px;
-  width: 100%;
+  height: 50px;
+  align-items: center;
   margin: auto ;
   box-shadow: 0 5px 2px -2px rgb(238, 234, 234);
 }
 
 .logo {
-  float: left;
+  /* float: left; */
   margin: 20px 20px;
+  height: 30px;
+  
 }
 
 .testimonial {
